[package]
edition = "2021"
license = "MIT"
name = "test-engine"
version = "0.2.0"

[dependencies]
indexmap = "2.2.6"
lazy_static = "1.4.0"
radix-engine = "1.2.0"
radix-engine-interface = "1.2.0"
radix-substate-store-impls = "1.2.0"
radix-transactions = "1.2.0"
scrypto-test = "1.2.0"

[lib]
radix-common = "1.2.0"
